Pn-4497 aggiornato file selfcare-PNPG.openapi.yaml